--- a/index.html
+++ b/index.html
@@ -101,6 +101,16 @@
             text-align: center;
             padding: 10px 0;
         }
+        @media (max-width: 900px) {
+            .imoveis {
+                grid-template-columns: repeat(2, 1fr);
+            }
+        }
+        @media (max-width: 600px) {
+            .imoveis {
+                grid-template-columns: 1fr;
+            }
+        }
     </style>
 </head>
 <body>
